Fix permalink z-index

--- a/site/src/app/plot-card/plot-card.component.css
+++ b/site/src/app/plot-card/plot-card.component.css
@@ -46,3 +46,7 @@ p.justify {
 .z10 {
     z-index: 10;
 }
+
+.z11 {
+    z-index: 11;
+}
